# circuit-compositions

./: .gitignore  README.md
code/: .pre-commit-config.yaml  base_model_evaluation.py  cache_base_model_output.py  evaluate.py  mask_train.py  pyproject.toml  train.py
code/circuit_evaluations/: calculate_global_sparsity.py  calculate_local_sparsity.py  circuit_overlap_evaluation.py  circuit_performance_evaluation.py  circuit_seed_comparison.py  combine_and_evaluate_circuits.py
code/comp_rep/: constants.py  loss.py  utils.py
code/comp_rep/callbacks/: eval_callbacks.py
code/comp_rep/data_prep/: create_function_data.py  dataset.py  generate.py  operations.py
code/comp_rep/eval/: cross_task_evaluations.py  decoding.py  evaluator.py  metrics.py
code/comp_rep/models/: lightning_models.py  lightning_pruned_models.py  model.py  nanoGPT.py
code/comp_rep/pruning/: calculate_mean_ablation_values.py  masked_base.py  pruner.py  subnetwork_mask_metrics.py  subnetwork_set_operations.py  ¨
code/example_runs/: cache_probabilities.sh  calculate_mean_values.sh  train_base_model.sh  train_mask_model.sh
code/tests/: test_activation_pruner.py  test_cached_probabilities.py  test_faithfulness_score.py  test_kl_divergence_score.py  test_str_func_mapping.py  test_str_match_mask.py  test_subnetwork_set_operations.py
code/tests/activation_pruning/: test_subnetwork_metrics.py
code/tests/test_data/: copy_train.csv  copy_train.pt  tokenizers.json
code/tracr_validation/: tracr_data_utils.py  tracr_model_utils.py  train_tracr_mask.py
data/: download_and_transform_base_data.sh  (+3 more)
(+33 files in other folders)
