[tool.poetry]
name = "comp_rep"
version = "0.1.0"
description = ""
license = "CC-BY-SA-4.0"
readme = "README.md"
authors = [
	{name = "Philipp Mondorf", email = "p.mondorf@lmu.de"},
	{name = "Sondre Wold", email = "sondrewo@uio.no"},
]
[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
torch = "^2.3.0"
flake8 = "^7.0.0"
pytest = "^8.2.1"
pre-commit = "^3.7.1"
tqdm = "^4.66.4"
lightning = "^2.3.0"
tensorboard = "^2.17.0"
wandb = "^0.17.3"
nnsight = "^0.2.21"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:pkg_resources is deprecated as an API*",
    "ignore:Deprecated call to `pkg_resources.declare_namespace`*",
    "ignore:Type google._upb._message.*"
]
